[gd_scene load_steps=3 format=3 uid="uid://c2mkli0c2xlid"]

[ext_resource type="Script" path="res://src/ui/components/card/card.gd" id="1_kh75g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yujfb"]
size = Vector2(205, 274)

[node name="Card" type="Area2D"]
script = ExtResource("1_kh75g")
title_path = "Background/Foreground/Title"
description_path = "Background/Foreground/Description"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yujfb")

[node name="Background" type="ColorRect" parent="."]
offset_left = -102.5
offset_top = -137.5
offset_right = 102.5
offset_bottom = 137.5
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Foreground" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -131.5
offset_right = 107.5
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.95, 0.95)
mouse_filter = 2

[node name="Title" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.042
offset_left = -20.0
offset_right = 20.0
offset_bottom = 11.45
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Title"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -23.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Description"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
